<resources>
    <string name="app_name">Movie Ticket</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_hello_welcome_to_galaxy_app">Hello! Welcome to Galaxy App</string>
    <string name="lbl_welcome_back_login_to_continue">Welcome back, Login to continue</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password ?</string>
    <string name="lbl_sign_in_with_facebook">Sign in with facebook</string>
    <string name="lbl_sign_up_with_facebook">Sign up with facebook</string>
    <string name="lbl_sign_in_with_google">Sign in with google</string>
    <string name="lbl_sign_up_with_google">Sign up with google</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_already_account">Already account ?</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_promotion_code">Promotion Code</string>
    <string name="lbl_select_a_language">Select a language</string>
    <string name="lbl_term_of_services">Term of Services</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_rate_us">Rate Us</string>
    <string name="lbl_log_out">Log out</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="lbl_plot_summary">Plot Summary</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_get_your_ticket">Get your ticket</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_payment_method">Payment Method</string>
    <string name="lbl_payment_amount">Payment amount</string>
    <string name="lbl_enter_promo_code">Enter Promo Code</string>
    <string name="lbl_Login">Login</string>
    <string name="lbl_name">Name</string>
    <string name="no_card_found_n_create_your_card_first">No card found! \n Create Your card first!</string>
    <string name="lbl_add_new_card">Add New Card</string>
    <string name="btn_confirm">Confirm</string>
</resources>