<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlLogin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/margin_large"
    tools:context=".ui.fragment.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmailText"
        android:text="@string/lbl_email"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/secondaryTextBlack30Color"
        android:fontFamily="@font/montserrat_medium"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editEmail"
        android:layout_below="@id/tvEmailText"
        android:inputType="textEmailAddress"
        android:includeFontPadding="true"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:textSize="@dimen/text_regular_2x"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPasswordText"
        android:text="@string/lbl_password"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_below="@id/editEmail"
        android:fontFamily="@font/montserrat_medium"
        android:textStyle="bold"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/secondaryTextBlack30Color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPasswordText"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium_2"
        android:paddingBottom="20dp"
        android:textSize="@dimen/text_regular_2x" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:fontFamily="@font/montserrat_medium"
        android:textStyle="bold"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/secondaryTextBlack30Color"
        android:textSize="@dimen/text_regular" />

    <include
        android:id="@+id/vpLogin"
        layout="@layout/view_pod_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvForgetPassword" />
</RelativeLayout>