<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingStart="@dimen/margin_medium_2"
    android:paddingEnd="@dimen/margin_medium_2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_header_height">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/drawer_header_image_size"
            android:layout_height="@dimen/drawer_header_image_size"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundImageView"
            app:srcCompat="@drawable/america"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_toEndOf="@id/ivProfile"
            android:orientation="vertical"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Lily Johnson"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="lilyjohnson@gmail.com"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="@dimen/text_regular" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/lbl_edit"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="@dimen/text_regular" />
            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llPromotion"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlHeader"
        android:layout_marginStart="@dimen/margin_medium_2">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            android:src="@drawable/ic_baseline_local_offer_24"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPromotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_large"
            android:gravity="center"
            android:text="@string/lbl_promotion_code"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/text_regular_3x" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLanguage"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llPromotion"
        android:layout_marginStart="@dimen/margin_medium_2">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            android:src="@drawable/ic_baseline_g_translate_24"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_large"
            android:gravity="center"
            android:text="@string/lbl_select_a_language"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/text_regular_3x" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTermOfService"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llLanguage"
        android:layout_marginStart="@dimen/margin_medium_2">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            android:src="@drawable/ic_baseline_assignment_24"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTermOfService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_large"
            android:gravity="center"
            android:text="@string/lbl_term_of_services"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/text_regular_3x" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llHelp"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_below="@id/llTermOfService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            app:tint="@color/white"
            android:src="@drawable/ic_round_help_24"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHelp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_large"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/text_regular_3x"
            android:text="@string/lbl_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llRateUs"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_below="@id/llHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            app:tint="@color/white"
            android:src="@drawable/ic_baseline_rate_us_white_24"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRateUs"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_large"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/text_regular_3x"
            android:text="@string/lbl_rate_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llLogOut"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginBottom="70dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            app:tint="@color/white"
            android:src="@drawable/ic_baseline_login_24"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogOut"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_large"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/text_regular_3x"
            android:text="@string/lbl_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>